[metadata]
name = shuup-channels
version = 1.0.0.post.dev
description = Enables the power of WebSockets with Django Channels in Shuup Ecommerce Platform.
long_description = file: README.md
keywords = shuup websocket channels
url = https://github.com/chessbr/shuup-channels
license = MIT
author = Christian Hess

[options]
include_package_data = True
packages = find:
install_requires =
    shuup
    channels

[options.entry_points]
shuup.addon = shuup_channels = shuup_channels

[bdist_wheel]
universal = 1

[flake8]
exclude = dist,build,migrations,docs
max-line-length = 120
max-complexity = 10

[isort]
atomic=true
combine_as_imports=false
indent=4
known_first_party=shuup_channels
known_standard_library=token,tokenize,enum,importlib
known_third_party=django,shuup,shuup_*
length_sort=false
line_length=79
multi_line_output=5
order_by_type=false
skip=migrations,doc,build
not_skip=__init__.py
wrap_length=79
diff=True
